CREATE-3293: -added setup cmd for jenkins job -added pytest cov, flake8 pep8

--- a/requirements_CONDA.txt
+++ b/requirements_CONDA.txt
@@ -6,13 +6,18 @@ attrs=19.3.0=py_0
 backcall=0.1.0=py36_0
 blas=1.0=mkl
 bleach=3.1.0=py_0
-ca-certificates=2019.10.16=0
-certifi=2019.9.11=py36_0
+bosch-ca=1.0=1
+ca-certificates=2020.1.1=0
+certifi=2019.11.28=py36_0
 colorama=0.4.1=py_0
+coverage=5.0=py36he774522_0
 cycler=0.10.0=py36h009560c_0
 cython=0.29.14=py36ha925a31_0
 decorator=4.4.1=py_0
+defusedxml=0.5.0=pypi_0
+dill=0.3.1.1=pypi_0
 entrypoints=0.3=py36_0
+flake8=3.7.9=py36_0
 freetype=2.8=vc14h17c9bdf_0
 icc_rt=2019.0.0=h0cc432a_1
 icu=58.2=vc14hc45fdbb_0
@@ -31,6 +36,7 @@ jupyter_client=5.3.4=py36_0
 jupyter_console=6.0.0=py36_0
 jupyter_core=4.6.1=py36_0
 kiwisolver=1.1.0=py36ha925a31_0
+klepto=0.1.8=pypi_0
 libpng=1.6.37=h2a8f88b_0
 libsodium=1.0.3=0
 m2w64-gcc-libgfortran=5.3.0=6
@@ -40,16 +46,20 @@ m2w64-gmp=6.1.0=2
 m2w64-libwinpthread-git=5.0.0.4634.697f757=2
 markupsafe=1.1.1=py36he774522_0
 matplotlib=2.2.2=py36h153e9ff_1
+mccabe=0.6.1=py36_1
 mistune=0.8.4=py36he774522_0
 mkl=2019.5=281
 mkl-service=2.3.0=py36hb782905_0
 mkl_fft=1.0.15=py36h14836fe_0
 mkl_random=1.1.0=py36h675688f_0
 more-itertools=7.2.0=py36_0
+mpmath=1.1.0=pypi_0
 msys2-conda-epoch=20160418=1
+mystic=0.3.5=pypi_0
 nbconvert=5.6.1=py36_0
 nbformat=4.4.0=py36h3a5bc1b_0
 notebook=6.0.2=py36_0
+numexpr=2.7.0=pypi_0
 numpy=1.17.3=py36h4ceb530_0
 numpy-base=1.17.3=py36hc3f5095_0
 openssl=1.1.1=he774522_0
@@ -58,17 +68,22 @@ pandas=0.25.3=py36ha925a31_0
 pandoc=2.2.3.2=0
 pandocfilters=1.4.2=py36_1
 parso=0.5.1=py_0
+pep8=1.7.1=py36_0
 pickleshare=0.7.5=py36_0
 pip=19.3.1=py36_0
 pluggy=0.13.0=py36_0
+pox=0.2.7=pypi_0
 prometheus_client=0.7.1=py_0
 prompt_toolkit=2.0.10=py_0
 py=1.8.0=py_0
+pycodestyle=2.5.0=py36_0
+pyflakes=2.1.1=py36_0
 pygments=2.4.2=py_0
 pyparsing=2.4.5=py_0
 pyqt=5.9.2=py36ha878b3d_0
 pyrsistent=0.15.5=py36he774522_0
 pytest=5.0.1=py36_0
+pytest-cov=2.8.1=py_0
 python=3.6.9=h5500b2f_0
 python-dateutil=2.8.1=py_0
 pytz=2019.3=py_0
@@ -83,6 +98,8 @@ setuptools=41.6.0=py36_0
 sip=4.19.13=py36ha925a31_0
 six=1.13.0=py36_0
 sqlite=3.30.1=he774522_0
+
+tables=3.6.1=pypi_0
 terminado=0.8.3=py36_0
 testpath=0.4.4=py_0
 tornado=6.0.3=py36he774522_0
