--- a/requirements_CONDA.txt
+++ b/requirements_CONDA.txt
@@ -1,109 +1,118 @@
 # This file may be used to create an environment using:
 # $ conda create --name <env> --file <this file>
 # platform: win-64
-atomicwrites=1.3.0=py36_1
+atomicwrites=1.3.0=py_0
 attrs=19.3.0=py_0
-backcall=0.1.0=py36_0
+backcall=0.1.0=py37_0
 blas=1.0=mkl
 bleach=3.1.0=py_0
+blosc=1.16.3=h7bd577a_0
 bosch-ca=1.0=1
+bzip2=1.0.8=he774522_0
 ca-certificates=2020.1.1=0
-certifi=2019.11.28=py36_0
-colorama=0.4.1=py_0
-coverage=5.0=py36he774522_0
-cycler=0.10.0=py36h009560c_0
-cython=0.29.14=py36ha925a31_0
+certifi=2019.11.28=py37_0
+colorama=0.4.3=py_0
+coverage=5.0=py37he774522_0
+cycler=0.10.0=py37_0
+cython=0.29.15=py37ha925a31_0
 decorator=4.4.1=py_0
-entrypoints=0.3=py36_0
-flake8=3.7.9=py36_0
-freetype=2.8=vc14h17c9bdf_0
+entrypoints=0.3=py37_0
+flake8=3.7.9=py37_0
+freetype=2.9.1=ha9979f8_1
+hdf5=1.10.4=h7ebc959_0
 icc_rt=2019.0.0=h0cc432a_1
-icu=58.2=vc14hc45fdbb_0
-importlib_metadata=0.23=py36_0
-intel-openmp=2019.5=281
-ipykernel=5.1.3=py36h39e3cac_0
-ipython=7.9.0=py36h39e3cac_0
-ipython_genutils=0.2.0=py36h3c5d0ee_0
+icu=58.2=ha66f8fd_1
+importlib_metadata=1.5.0=py37_0
+intel-openmp=2020.0=166
+ipykernel=5.1.4=py37h39e3cac_0
+ipython=7.12.0=py37h5ca1d4c_0
+ipython_genutils=0.2.0=py37_0
 ipywidgets=7.5.1=py_0
-jedi=0.15.1=py36_0
-jinja2=2.10.3=py_0
-jpeg=9b=vc14h4d7706e_1
-jsonschema=3.2.0=py36_0
-jupyter=1.0.0=py36_7
-jupyter_client=5.3.4=py36_0
-jupyter_console=6.0.0=py36_0
-jupyter_core=4.6.1=py36_0
-kiwisolver=1.1.0=py36ha925a31_0
+jedi=0.16.0=py37_0
+jinja2=2.11.1=py_0
+jpeg=9b=hb83a4c4_2
+jsonschema=2.6.0=py37_0
+jupyter=1.0.0=py37_7
+jupyter_client=5.3.3=py_0
+jupyter_console=6.1.0=py_0
+jupyter_core=4.5.0=py_0
+kiwisolver=1.1.0=py37ha925a31_0
 libpng=1.6.37=h2a8f88b_0
-libsodium=1.0.3=0
+libsodium=1.0.16=h9d3ae62_0
+lz4-c=1.8.1.2=h2fa13f4_0
+lzo=2.10=h6df0209_2
 m2w64-gcc-libgfortran=5.3.0=6
 m2w64-gcc-libs=5.3.0=7
 m2w64-gcc-libs-core=5.3.0=7
 m2w64-gmp=6.1.0=2
 m2w64-libwinpthread-git=5.0.0.4634.697f757=2
-markupsafe=1.1.1=py36he774522_0
-matplotlib=2.2.2=py36h153e9ff_1
-mccabe=0.6.1=py36_1
-mistune=0.8.4=py36he774522_0
-mkl=2019.5=281
-mkl-service=2.3.0=py36hb782905_0
-mkl_fft=1.0.15=py36h14836fe_0
-mkl_random=1.1.0=py36h675688f_0
-more-itertools=7.2.0=py36_0
+markupsafe=1.1.1=py37he774522_0
+matplotlib=3.1.3=py37_0
+matplotlib-base=3.1.3=py37h64f37c6_0
+mccabe=0.6.1=py37_1
+mistune=0.8.4=py37he774522_0
+mkl=2020.0=166
+mkl-service=2.3.0=py37hb782905_0
+mkl_fft=1.0.15=py37h14836fe_0
+mkl_random=1.1.0=py37h675688f_0
+mock=4.0.1=py_0
+more-itertools=8.2.0=py_0
 msys2-conda-epoch=20160418=1
-nbconvert=5.6.1=py36_0
-nbformat=4.4.0=py36h3a5bc1b_0
-notebook=6.0.2=py36_0
-numpy=1.17.3=py36h4ceb530_0
-numpy-base=1.17.3=py36hc3f5095_0
-openssl=1.1.1=he774522_0
-packaging=19.2=py_0
-pandas=0.25.3=py36ha925a31_0
+nbconvert=5.6.1=py37_0
+nbformat=5.0.4=py_0
+notebook=6.0.1=py37_0
+numpy=1.18.1=py37h93ca92e_0
+numpy-base=1.18.1=py37hc3f5095_1
+openssl=1.1.1d=he774522_4
+packaging=20.1=py_0
+pandas=1.0.1=py37h47e9c7a_0
 pandoc=2.2.3.2=0
-pandocfilters=1.4.2=py36_1
-parso=0.5.1=py_0
-pep8=1.7.1=py36_0
-pickleshare=0.7.5=py36_0
-pip=19.3.1=py36_0
-pluggy=0.13.0=py36_0
+pandocfilters=1.4.2=py37_1
+parso=0.6.1=py_0
+pep8=1.7.1=py37_0
+pickleshare=0.7.5=py37_0
+pip=20.0.2=py37_1
+pluggy=0.13.1=py37_0
 prometheus_client=0.7.1=py_0
-prompt_toolkit=2.0.10=py_0
-py=1.8.0=py_0
-pycodestyle=2.5.0=py36_0
-pyflakes=2.1.1=py36_0
-pygments=2.4.2=py_0
-pyparsing=2.4.5=py_0
-pyqt=5.9.2=py36ha878b3d_0
-pyrsistent=0.15.5=py36he774522_0
-pytest=5.0.1=py36_0
+prompt_toolkit=3.0.3=py_0
+py=1.8.1=py_0
+pycodestyle=2.5.0=py37_0
+pyflakes=2.1.1=py37_0
+pygments=2.5.2=py_0
+pyparsing=2.4.6=py_0
+pyqt=5.9.2=py37h6538335_2
+pytables=3.6.1=py37h1da0976_0
+pytest=5.3.5=py37_0
 pytest-cov=2.8.1=py_0
-python=3.6.9=h5500b2f_0
+python=3.7.6=h60c2a47_2
 python-dateutil=2.8.1=py_0
 pytz=2019.3=py_0
-pywin32=223=py36hfa6e2cd_1
-pywinpty=0.5.5=py36_1000
-pyzmq=17.0.0=py36hfa6e2cd_0
+pywinpty=0.5.7=py37_0
+pyzmq=18.1.1=py37ha925a31_0
 qt=5.9.7=vc14h73c81de_0
-qtconsole=4.6.0=py_0
-scipy=1.3.1=py36h29ff71c_0
-send2trash=1.5.0=py36_0
-setuptools=41.6.0=py36_0
-sip=4.19.13=py36ha925a31_0
-six=1.13.0=py36_0
-sqlite=3.30.1=he774522_0
-terminado=0.8.3=py36_0
+qtconsole=4.6.0=py_1
+scipy=1.4.1=py37h9439919_0
+send2trash=1.5.0=py37_0
+setuptools=45.2.0=py37_0
+sip=4.19.8=py37h6538335_0
+six=1.14.0=py37_0
+snappy=1.1.7=h777316e_3
+sqlite=3.31.1=he774522_0
+terminado=0.8.3=py37_0
 testpath=0.4.4=py_0
-tornado=6.0.3=py36he774522_0
-traitlets=4.3.3=py36_0
+tornado=6.0.3=py37he774522_3
+traitlets=4.3.3=py37_0
 vc=14.1=h0510ff6_4
-vs2015_runtime=14.16.27012=hf0eaf9b_0
-wcwidth=0.1.7=py36h3d5aa90_0
-webencodings=0.5.1=py36_1
-wheel=0.33.6=py36_0
-widgetsnbextension=3.5.1=py36_0
-wincertstore=0.2=py36h7fe50ca_0
+vs2015_runtime=14.16.27012=hf0eaf9b_1
+wcwidth=0.1.8=py_0
+webencodings=0.5.1=py37_1
+wheel=0.34.2=py37_0
+widgetsnbextension=3.5.1=py37_0
+wincertstore=0.2=py37_0
 winpty=0.4.3=4
-xlrd=1.2.0=py_0
-zeromq=4.1.3=vc14_1
-zipp=0.6.0=py_0
-zlib=1.2.11=vc14h1cdd9ab_1
+xlrd=1.2.0=py37_0
+xz=5.2.4=h2fa13f4_4
+zeromq=4.3.1=h33f27b4_3
+zipp=2.2.0=py_0
+zlib=1.2.11=h62dcd97_3
+zstd=1.3.7=h508b16e_0
