--- a/requirements_CONDA.txt
+++ b/requirements_CONDA.txt
@@ -1,6 +1,7 @@
 # This file may be used to create an environment using:
 # $ conda create --name <env> --file <this file>
 # platform: win-64
+arviz=0.6.1=py_0
 atomicwrites=1.3.0=py_0
 attrs=19.3.0=py_0
 backcall=0.1.0=py37_0
@@ -11,14 +12,19 @@ bosch-ca=1.0=1
 bzip2=1.0.8=he774522_0
 ca-certificates=2020.1.1=0
 certifi=2019.11.28=py37_0
+cftime=1.0.4.2=py37h8c2d366_0
 colorama=0.4.3=py_0
 coverage=5.0=py37he774522_0
+curl=7.68.0=h2a8f88b_0
 cycler=0.10.0=py37_0
 cython=0.29.15=py37ha925a31_0
 decorator=4.4.1=py_0
+defusedxml=0.6.0=py_0
 entrypoints=0.3=py37_0
 flake8=3.7.9=py37_0
 freetype=2.9.1=ha9979f8_1
+h5py=2.10.0=py37h5e291fa_0
+hdf4=4.2.13=h712560f_2
 hdf5=1.10.4=h7ebc959_0
 icc_rt=2019.0.0=h0cc432a_1
 icu=58.2=ha66f8fd_1
@@ -37,15 +43,42 @@ jupyter_client=5.3.3=py_0
 jupyter_console=6.1.0=py_0
 jupyter_core=4.5.0=py_0
 kiwisolver=1.1.0=py37ha925a31_0
+krb5=1.17.1=hc04afaa_0
+libcurl=7.68.0=h2a8f88b_0
+libgpuarray=0.7.6=hfa6e2cd_0
+libnetcdf=4.7.3=h1302dcc_0
 libpng=1.6.37=h2a8f88b_0
+libpython=2.1=py37_0
 libsodium=1.0.16=h9d3ae62_0
+libssh2=1.8.2=h7a1dbc1_0
 lz4-c=1.8.1.2=h2fa13f4_0
 lzo=2.10=h6df0209_2
+m2w64-binutils=2.25.1=5
+m2w64-bzip2=1.0.6=6
+m2w64-crt-git=5.0.0.4636.2595836=2
+m2w64-gcc=5.3.0=6
+m2w64-gcc-ada=5.3.0=6
+m2w64-gcc-fortran=5.3.0=6
 m2w64-gcc-libgfortran=5.3.0=6
 m2w64-gcc-libs=5.3.0=7
 m2w64-gcc-libs-core=5.3.0=7
+m2w64-gcc-objc=5.3.0=6
 m2w64-gmp=6.1.0=2
+m2w64-headers-git=5.0.0.4636.c0ad18a=2
+m2w64-isl=0.16.1=2
+m2w64-libiconv=1.14=6
+m2w64-libmangle-git=5.0.0.4509.2e5a9a2=2
 m2w64-libwinpthread-git=5.0.0.4634.697f757=2
+m2w64-make=4.1.2351.a80a8b8=2
+m2w64-mpc=1.0.3=3
+m2w64-mpfr=3.1.4=4
+m2w64-pkg-config=0.29.1=2
+m2w64-toolchain=5.3.0=7
+m2w64-tools-git=5.0.0.4592.90b8472=2
+m2w64-windows-default-manifest=6.4=3
+m2w64-winpthreads-git=5.0.0.4634.697f757=2
+m2w64-zlib=1.2.8=10
+mako=1.1.1=py_0
 markupsafe=1.1.1=py37he774522_0
 matplotlib=3.1.3=py37_0
 matplotlib-base=3.1.3=py37h64f37c6_0
@@ -60,7 +93,9 @@ more-itertools=8.2.0=py_0
 msys2-conda-epoch=20160418=1
 nbconvert=5.6.1=py37_0
 nbformat=5.0.4=py_0
+netcdf4=1.5.3=py37h012c1a0_0
 notebook=6.0.1=py37_0
+numexpr=2.7.1=py37h25d0782_0
 numpy=1.18.1=py37h93ca92e_0
 numpy-base=1.18.1=py37hc3f5095_1
 openssl=1.1.1d=he774522_4
@@ -69,6 +104,7 @@ pandas=1.0.1=py37h47e9c7a_0
 pandoc=2.2.3.2=0
 pandocfilters=1.4.2=py37_1
 parso=0.6.1=py_0
+patsy=0.5.1=py37_0
 pep8=1.7.1=py37_0
 pickleshare=0.7.5=py37_0
 pip=20.0.2=py37_1
@@ -79,8 +115,11 @@ py=1.8.1=py_0
 pycodestyle=2.5.0=py37_0
 pyflakes=2.1.1=py37_0
 pygments=2.5.2=py_0
+pygpu=0.7.6=py37h452e1ab_0
+pymc3=3.8=py_0
 pyparsing=2.4.6=py_0
 pyqt=5.9.2=py37h6538335_2
+pyreadline=2.1=py37_1
 pytables=3.6.1=py37h1da0976_0
 pytest=5.3.5=py37_0
 pytest-cov=2.8.1=py_0
@@ -100,7 +139,10 @@ snappy=1.1.7=h777316e_3
 sqlite=3.31.1=he774522_0
 terminado=0.8.3=py37_0
 testpath=0.4.4=py_0
+theano=1.0.4=py37_0
+tk=8.6.8=hfa6e2cd_0
 tornado=6.0.3=py37he774522_3
+tqdm=4.42.1=py_0
 traitlets=4.3.3=py37_0
 vc=14.1=h0510ff6_4
 vs2015_runtime=14.16.27012=hf0eaf9b_1
@@ -110,6 +152,7 @@ wheel=0.34.2=py37_0
 widgetsnbextension=3.5.1=py37_0
 wincertstore=0.2=py37_0
 winpty=0.4.3=4
+xarray=0.15.0=py_0
 xlrd=1.2.0=py37_0
 xz=5.2.4=h2fa13f4_4
 zeromq=4.3.1=h33f27b4_3
