CREATE-3293: -added setup.py to win script (if needed) -publish html test coverage results -moved pyTable from conda to pip -win installer uses yml file too
Signed-off-by: Gyongyver Kiss <gyongyver.kiss@hu.bosch.com>

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 build
 .pytest_cache
 __pycache__
-_venv
+_venv*
 .spyproject
 *.so
 *.pyd
@@ -16,3 +16,5 @@ __pycache__
 *coverage*
 junit.xml
 
+src/pip-delete-this-directory.txt
+.vscode/settings.json
