--- a/environment.yml
+++ b/environment.yml
@@ -5,7 +5,6 @@ dependencies:
 - pytest
 - scipy
 - pandas
-- pytables
 - cython
 - matplotlib
 - pymc3
@@ -13,3 +12,4 @@ dependencies:
 - pip
 - pip:
   - mystic
+  - tables
