--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,10 @@ junit.xml
 
 src/pip-delete-this-directory.txt
 .vscode/settings.json
+
+doc/source/demos/*ipynb
+doc/source/demos/*.py
+doc/source/demos/*.h5
+doc/source/demos/*csv
+doc/source/demos/*.vmap
+doc/source/demos/pic
