Exclude pylife/_version.py from coverage report
All the plotting stuff should remain in the coverage report. People should see
that this is not covered and eventually we might even cover it.

--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,8 @@ _venv*
 pylife.egg-info
 .ipynb_checkpoints
 __pycache__
-*coverage*
+coverage_report*
+.coverage
 junit.xml
 
 src/pip-delete-this-directory.txt
