--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,6 @@
 [pytest]
+markers =
+	slow_acceptance: long running acceptance test (not run by default)
+
 testpaths = tests
-addopts = --cov=pylife --cov-append
+addopts = --cov=pylife --cov-append -m "not slow_acceptance"
