Exclude tests and demos and include requirements.txt in source dist

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,3 +2,6 @@ include versioneer.py
 include pylife/_version.py
 include README.md
 include LICENSE
+include requirements.txt
+recursive-exclude tests *
+recursive-exclude demos *
