--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-18.04, windows-latest]
-        python-version: [3.6, 3.7, 3.8]
+        python-version: [3.6, 3.7, 3.8, 3.9]
 
     steps:
     - uses: actions/checkout@v2
@@ -24,7 +24,7 @@ jobs:
         pip install -r requirements.txt
         python setup.py build_ext --inplace --force --define CYTHON_TRACE
     - name: Test with pytest
-      env: 
+      env:
         THEANO_FLAGS: cxx=""
       run: |
         pytest
