Exclude python-3.9 / windows from GitHub tests
There are no wheels oft pytables for python-3.9 and windows yet.

Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -9,6 +9,10 @@ jobs:
       matrix:
         os: [ubuntu-18.04, windows-latest]
         python-version: [3.6, 3.7, 3.8, 3.9]
+        exclude: # no cp39m-win_amd64 wheels for pytables, yet :(
+          - os: windows-latest
+            python-version: 3.9
+
 
     steps:
     - uses: actions/checkout@v2
