--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -21,7 +21,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install wheel
         pip install flake8 pytest pytest-cov
-        pip install -r requirements.txt
+        pip install --prefer-binary -r requirements.txt
         python setup.py build_ext --inplace --force --define CYTHON_TRACE
     - name: Test with pytest
       env:
