Enforce svg matplotlib backend in test pipeline Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -5,6 +5,8 @@ on: [push]
 jobs:
   build:
     runs-on: ${{ matrix.os }}
+    env: 
+      MPLBACKEND: svg
     strategy:
       matrix:
         os: [ubuntu-18.04, windows-latest]
