Cleanup/restructure demo directory and doc/source/demos
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -48,7 +48,7 @@ help:
 
 .PHONY: clean
 clean:
-	rm -rf $(BUILDDIR)/*
+	rm -rf $(BUILDDIR)/* `git check-ignore source/demos/*`
 
 .PHONY: html
 html:
