--- a/pytest.ini
+++ b/pytest.ini
@@ -4,3 +4,8 @@ markers =
 
 testpaths = tests
 addopts = --cov=pylife --cov-append -m "not slow_acceptance"
+
+filterwarnings =
+	       ignore::DeprecationWarning:.*pymc3.*
+       	       ignore::DeprecationWarning:klepto
+       	       ignore::DeprecationWarning:theano
