--- a/.github/workflows/pypi-deploy.yml
+++ b/.github/workflows/pypi-deploy.yml
@@ -5,7 +5,7 @@ on:
     type: [published]
 
 env:
-  CIBW_BUILD: cp36-* cp37-* cp38-* cp39-*
+  CIBW_BUILD: cp37-* cp38-* cp39-*
   CIBW_BEFORE_BUILD: pip install cython
   CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
   CIBW_MANYLINUX_I686_IMAGE: manylinux2014
