--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -5,12 +5,12 @@ on: [push]
 jobs:
   build:
     runs-on: ${{ matrix.os }}
-    env: 
+    env:
       MPLBACKEND: svg
     strategy:
       matrix:
         os: [ubuntu-18.04, windows-latest]
-        python-version: [3.6, 3.7, 3.8, 3.9]
+        python-version: [3.7, 3.8, 3.9]
 
     steps:
     - uses: actions/checkout@v2
