Remove tag prefixes from setup.cfg
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,5 +3,5 @@ VCS = git
 style = pep440
 versionfile_source = pylife/_version.py
 versionfile_build = pylife/_version.py
-tag_prefix = pylife-
-parentdir_prefix = pylife-
+tag_prefix = ""
+parentdir_prefix = ""
