Adjust binder requirements
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/binder/requirements.txt
+++ b/binder/requirements.txt
@@ -1,11 +1,6 @@
-cython
-numpy
-scipy
-pandas
+pylife
+xlrd
 tables
-mystic
-pymc3
 jupyter
 matplotlib
-xlrd
-git+https://github.com/boschresearch/pylife.git
+pyvista
