--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@ coverage.xml
 # Build and docs folder/files
 _build/*
 build/*
+*/build/
 dist/*
 sdist/*
 docs/api/*
@@ -54,4 +55,5 @@ docs/demos/*
 
 # Per-project virtualenvs
 .venv*/
+_venv*/
 .conda*/
