--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install wheel
+        pip install -U setuptools setuptools_scm wheel
         pip install flake8 pytest pytest-cov
         pip install --prefer-binary -r requirements.txt
         python setup.py build_ext --inplace --force --define CYTHON_TRACE
