Fix test coverage source
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -84,7 +84,7 @@ docs =
 # CAUTION: --cov flags may prohibit setting breakpoints while debugging.
 #          Comment those flags to avoid this py.test issue.
 addopts =
-    --cov pylife --cov-append -m "not slow_acceptance"
+    --cov src/pylife --cov-append -m "not slow_acceptance"
 
 norecursedirs =
     dist
