Get odbclient/odbserver ready for deployment
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/tools/odbserver/setup.cfg
+++ b/tools/odbserver/setup.cfg
@@ -2,10 +2,10 @@
 name = pylife-odbserver
 summary = A server for odbAccess to be acessed by pylife-odbclient
 author = Johannes Mueller
-author-email = johannes.mueller4@de.bosch.com
+author_email = johannes.mueller4@de.bosch.com
 license = none
-home-page = http://github.com/boschresearch/pylife/tools/odbserver
-description-file = README.md
+home_page = http://github.com/boschresearch/pylife/tools/odbserver
+description_file = README.md
 # Add here all kinds of additional classifiers as defined under
 # https://pypi.python.org/pypi?%3Aaction=list_classifiers
 classifiers = Development Status :: 4 - Beta,
