Adjust licenses and classifiers in odbclient/odbserver
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/tools/odbserver/setup.cfg
+++ b/tools/odbserver/setup.cfg
@@ -3,13 +3,12 @@ name = pylife-odbserver
 summary = A server for odbAccess to be acessed by pylife-odbclient
 author = Johannes Mueller
 author_email = johannes.mueller4@de.bosch.com
-license = none
+license = Apache-2
 home_page = http://github.com/boschresearch/pylife/tools/odbserver
 description_file = README.md
 # Add here all kinds of additional classifiers as defined under
 # https://pypi.python.org/pypi?%3Aaction=list_classifiers
-classifiers = Development Status :: 4 - Beta,
-              Programming Language :: Python
+classifiers = Programming Language :: Python
 
 [entry_points]
 # Add here console scripts like:
