Fix odbserver description
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/tools/odbserver/setup.cfg
+++ b/tools/odbserver/setup.cfg
@@ -5,7 +5,8 @@ author = Johannes Mueller
 author_email = johannes.mueller4@de.bosch.com
 license = Apache-2
 home_page = http://github.com/boschresearch/pylife/tools/odbserver
-description_file = README.md
+long_description = file: README.md
+long_description_content_type = text/markdown; charset=UTF-8
 # Add here all kinds of additional classifiers as defined under
 # https://pypi.python.org/pypi?%3Aaction=list_classifiers
 classifiers = Programming Language :: Python
