Fix odbserver wheel building
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/tools/odbserver/setup.cfg
+++ b/tools/odbserver/setup.cfg
@@ -21,13 +21,10 @@ classifiers = Programming Language :: Python
 # as well as other entry_points.
 
 
-[files]
-# Add here 'data_files', 'packages' or 'namespace_packages'.
-# Additional data files are defined as key value pairs of source and target:
+[options]
 packages =
     odbserver
-# data_files =
-#    share/odbserver_docs = docs/*
+
 
 [extras]
 # Add here additional requirements for extra features, like:
