HOTFIX: pin numpy<=1.21
Obviously there is some issue with numpy 1.22 that makes the CI fail. Pinning
numpy for the time being.

Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -48,7 +48,7 @@ python_requires = >=3.7
 # For more information, check out https://semver.org/.
 install_requires =
     importlib-metadata; python_version<"3.8"
-    numpy
+    numpy<=1.21
     scipy
     pandas
     pymc3
