--- a/setup.cfg
+++ b/setup.cfg
@@ -50,7 +50,7 @@ install_requires =
     importlib-metadata; python_version<"3.8"
     numpy<=1.21
     scipy
-    pandas
+    pandas>=1.4.0rc0
     pymc3
     h5py
     cython
