- package installation setup changes

--- a/setup.cfg
+++ b/setup.cfg
@@ -34,7 +34,7 @@ classifiers =
 
 [options]
 zip_safe = False
-packages = find_namespace:
+packages = find:
 include_package_data = True
 package_dir =
     =src
@@ -72,13 +72,28 @@ testing =
     hypothesis
 
 docs =
-     sphinx
-     m2r2
-     nbsphinx
-     nbsphinx-link
-     panel
-     ipyvtklink
-     plotly
+    sphinx
+    m2r2
+    nbsphinx
+    nbsphinx-link
+    panel
+    ipyvtklink
+    plotly
+
+jenkins =
+    setuptools
+    pytest
+    pytest-cov
+    flake8
+    pep8-naming
+    sphinx
+    m2r2
+    nbsphinx
+    nbsphinx-link
+    panel
+    ipyvtklink
+    plotly
+    pyvista
 
 [tool:pytest]
 # Specify command line options as you would do when invoking pytest directly.
