--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -23,8 +23,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install -U setuptools setuptools_scm wheel
         pip install flake8 pytest pytest-cov
-        pip install --prefer-binary -r requirements.txt
-        python setup.py build_ext --inplace --force --define CYTHON_TRACE
+        pip install -e .[testing]
     - name: Test with pytest
       env:
         THEANO_FLAGS: cxx=""
