--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -9,8 +9,8 @@ jobs:
       MPLBACKEND: svg
     strategy:
       matrix:
-        os: [ubuntu-18.04, windows-latest]
-        python-version: [3.7, 3.8, 3.9]
+        os: [ubuntu-20.04, windows-latest]
+        python-version: ['3.8', '3.9']
 
     steps:
     - uses: actions/checkout@v2
