--- a/setup.cfg
+++ b/setup.cfg
@@ -81,20 +81,9 @@ docs =
     ipyvtklink
     plotly
 
-jenkins =
-    setuptools
-    pytest
-    pytest-cov
+analysis =
     flake8
     pep8-naming
-    sphinx
-    m2r2
-    nbsphinx
-    nbsphinx-link
-    panel
-    ipyvtklink
-    plotly
-    pyvista
 
 pymc3 =
       pymc3
