Make tsfresh dependency optional
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -51,7 +51,7 @@ install_requires =
     scipy
     pandas>=1.4.0
     h5py
-    tsfresh
+    matplotlib
     cython
 
 [options.packages.find]
@@ -80,9 +80,12 @@ docs =
      ipyvtklink
      plotly
 
+tsfresh =
+    tsfresh
+
 pymc3 =
-      pymc3
-      numpy<1.22,>=1.18
+    pymc3
+    numpy<1.22,>=1.18
 
 [tool:pytest]
 # Specify command line options as you would do when invoking pytest directly.
