Add [all] option to setup.cfg
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -87,6 +87,8 @@ pymc3 =
     pymc3
     numpy<1.22,>=1.18
 
+all = %(tsfresh)s %(pymc3)s
+
 [tool:pytest]
 # Specify command line options as you would do when invoking pytest directly.
 # e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
