- missing packages, extras
Signed-off-by: Bedey Mate <mate.bedey@hu.bosch.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -77,9 +77,10 @@ docs =
     m2r2
     nbsphinx
     nbsphinx-link
-    panel
     ipyvtklink
     plotly
+    jupyter_sphinx
+    myst_parser
 
 analysis =
     flake8
@@ -88,6 +89,20 @@ analysis =
 pymc3 =
       pymc3
       numpy<1.22,>=1.18
+
+extras =
+    jupyter
+    matplotlib
+    plotly
+    pyvista
+    mystic
+    ipykernel
+    itkwidgets
+    panel
+    ipyvtklink
+    ipygany
+    xvfbwrapper
+
 
 [tool:pytest]
 # Specify command line options as you would do when invoking pytest directly.
