- missing packages, source-env.yml
Signed-off-by: Bedey Mate <mate.bedey@hu.bosch.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -80,7 +80,7 @@ docs =
     plotly
     jupyter_sphinx
     myst_parser
-    pandoc
+
 
 analysis =
     flake8
@@ -107,6 +107,8 @@ extras =
     ipyvtklink
     ipygany
     xvfbwrapper
+    pandoc
+    tables
 
 
 [tool:pytest]
