--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -23,8 +23,9 @@ formats:
 python:
   version: 3.8
   install:
-    - requirements: docs/requirements.txt
     - method: pip
       path: .
       extra_requirements:
         - docs
+        - all
+        - extras
