--- a/tools/odbclient/setup.cfg
+++ b/tools/odbclient/setup.cfg
@@ -42,6 +42,7 @@ package_dir =
 install_requires =
     importlib-metadata; python_version<"3.8"
     pandas
+    numpy<1.22
 
 [options.packages.find]
 where = src
