Lifting numpy version restricton
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -47,7 +47,7 @@ python_requires = >=3.8
 # new major versions. This works if the required packages follow Semantic Versioning.
 # For more information, check out https://semver.org/.
 install_requires =
-    numpy<1.22
+    numpy
     scipy
     pandas>=1.4.0
     h5py
@@ -96,7 +96,7 @@ tsfresh =
 
 pymc3 =
     pymc3
-    numpy<1.22,>=1.18
+    numpy>=1.18
 
 all = %(tsfresh)s %(pymc3)s
 
