--- a/setup.cfg
+++ b/setup.cfg
@@ -76,7 +76,6 @@ testing =
 
 docs =
     sphinx
-    m2r2
     nbsphinx
     nbsphinx-link
     sphinx_rtd_theme>=1.0
@@ -96,6 +95,7 @@ tsfresh =
 
 pymc3 =
     pymc3
+    aesara
     numpy>=1.18
 
 all = %(tsfresh)s %(pymc3)s
