--- a/setup.cfg
+++ b/setup.cfg
@@ -93,12 +93,11 @@ analysis =
 tsfresh =
     tsfresh
 
-pymc3 =
-    pymc3
-    aesara
+pymc =
+    pymc
     numpy>=1.18
 
-all = %(tsfresh)s %(pymc3)s
+all = %(tsfresh)s %(pymc)s
 
 extras =
     jupyter
