Switch from pymc3 to pymc
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -93,11 +93,11 @@ analysis =
 tsfresh =
     tsfresh
 
-pymc3 =
-    pymc3
+pymc =
+    pymc
     numpy>=1.18
 
-all = %(tsfresh)s %(pymc3)s
+all = %(tsfresh)s %(pymc)s
 
 extras =
     jupyter
