--- a/setup.cfg
+++ b/setup.cfg
@@ -47,7 +47,7 @@ python_requires = >=3.8
 # new major versions. This works if the required packages follow Semantic Versioning.
 # For more information, check out https://semver.org/.
 install_requires =
-    numpy
+    numpy>=1.23
     scipy
     pandas>=1.4.0
     h5py!=3.7.0
@@ -95,8 +95,7 @@ tsfresh =
 
 pymc =
     pymc
-    bambi
-    numpy>=1.23
+    bambi @ git+https://github.com/bambinos/bambi.git#egg=bambi
 
 all = %(tsfresh)s %(pymc)s
 
