Run the whole test matrix even, when failing

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -9,6 +9,7 @@ jobs:
       MPLBACKEND: svg
       THEANO_FLAGS: cxx=""    
     strategy:
+      fail-fast: false
       matrix:
         os: [ubuntu-20.04, windows-latest]
         python-version: ['3.8', '3.9', '3.10']
