Disable pymc extension waiting for new bambi release
In the current 0.9.1 release of bambi the numpy version is restricted to <1.22.
As pypi does not allow us to pull the current git version of bambi as a
dependency we need to disable the pymc extension for now.

Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -93,11 +93,11 @@ analysis =
 tsfresh =
     tsfresh
 
-pymc =
-    pymc
-    bambi @ git+https://github.com/bambinos/bambi.git#egg=bambi
+# pymc =
+#    pymc
+#    bambi @ git+https://github.com/bambinos/bambi.git#egg=bambi
 
-all = %(tsfresh)s %(pymc)s
+all = %(tsfresh)s
 
 extras =
     jupyter
