--- a/setup.cfg
+++ b/setup.cfg
@@ -47,7 +47,7 @@ python_requires = >=3.8
 # new major versions. This works if the required packages follow Semantic Versioning.
 # For more information, check out https://semver.org/.
 install_requires =
-    numpy>=1.23
+    numpy==1.23.5
     scipy
     pandas>=1.4.0
     h5py!=3.7.0
@@ -93,6 +93,7 @@ analysis =
 
 tsfresh =
     tsfresh
+    numpy>=1.23
 
 # pymc =
 #    pymc
