Bring bambi dependency back in
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -95,11 +95,11 @@ tsfresh =
     tsfresh
     numpy>=1.23
 
-# pymc =
-#    pymc
-#    bambi @ git+https://github.com/bambinos/bambi.git#egg=bambi
+pymc =
+   pymc
+   bambi @ git+https://github.com/bambinos/bambi.git#egg=bambi
 
-all = %(tsfresh)s
+all = %(tsfresh)s %(pymc)s
 
 extras =
     jupyter
