Replace aesara with pytensor
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     env:
       MPLBACKEND: svg
-      AESARA_FLAGS: cxx="",exception_verbosity=high
+      PYTENSOR_FLAGS: cxx="",exception_verbosity=high
     strategy:
       fail-fast: false
       matrix:
