--- a/setup.cfg
+++ b/setup.cfg
@@ -97,7 +97,7 @@ tsfresh =
 
 pymc =
    pymc
-   bambi @ git+https://github.com/bambinos/bambi.git#egg=bambi
+   bambi
 
 all = %(tsfresh)s %(pymc)s
 
