Add some project urls to setup.cfg
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,8 +15,8 @@ url = https://github.com/boschresearch/pylife/
 project_urls =
     Documentation = https://pylife.readthedocs.io
     Source = https://github.com/boschresearch/pylife/
-#    Changelog = https://pyscaffold.org/en/latest/changelog.html
-#    Tracker = https://github.com/pyscaffold/pyscaffold/issues
+    Changelog = https://pylife.readthedocs.io/en/stable/CHANGELOG.html
+    Tracker = https://github.com/boschresearch/pylife/issues
 #    Conda-Forge = https://anaconda.org/conda-forge/pyscaffold
     Download = https://pypi.org/project/pylife/#files
 #    Twitter = https://twitter.com/PyScaffold
