--- a/tools/odbclient/setup.cfg
+++ b/tools/odbclient/setup.cfg
@@ -41,7 +41,7 @@ package_dir =
 # For more information, check out https://semver.org/.
 install_requires =
     importlib-metadata; python_version<"3.8"
-    pandas
+    pandas<2.0.0
     numpy==1.23.5
 
 [options.packages.find]
