--- a/.coveragerc
+++ b/.coveragerc
@@ -27,3 +27,5 @@ exclude_lines =
     # Don't complain if non-runnable code isn't run:
     if 0:
     if __name__ == .__main__.:
+
+    @(abc\.)?abstractmethod
