--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -15,9 +15,9 @@ jobs:
         python-version: ['3.8', '3.9', '3.10', '3.11']
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
@@ -29,6 +29,6 @@ jobs:
     - name: Unit tests
       run: pytest
     - name: Notebook flow tests
-      uses: GabrielBB/xvfb-action@v1
+      uses: coactions/setup-xvfb@v1
       with:
         run: python -m pytest -m demos
