--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -1,6 +1,11 @@
 name: Testsuite
 
-on: [push, pull_request]
+on: 
+  pull_request:
+  push:
+    branches:
+      - master
+      - develop
 
 jobs:
   build:
