--- a/setup.cfg
+++ b/setup.cfg
@@ -85,7 +85,9 @@ docs =
     jupyter_sphinx
     myst_parser
     panel
-    pyvista
+    pyvista[all,jupyter]
+    trame<3
+    ipywidgets
     xvfbwrapper
 
 
