Make binder install trame
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -4,7 +4,8 @@ dependencies:
   - pip
   - pip:
       - pylife[all]
-      - pyvista
+      - pyvista[all,jupyter]
+      - trame<3
       - panel
       - plotly
       - xvfbwrapper
