Switch from panel to trame (#30)
No longer use the pyvista panel backend as it has been removed from pyvista.
 
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -4,8 +4,8 @@ dependencies:
   - pip
   - pip:
       - pylife[all]
-      - pyvista
-      - panel
+      - pyvista[all,jupyter]
+      - trame<3
       - plotly
       - xvfbwrapper
       - ipyvtklink
