--- a/setup.cfg
+++ b/setup.cfg
@@ -70,7 +70,6 @@ testing =
     pytest-cov
     hypothesis
     pyvista
-    panel
     xvfbwrapper
     testbook
     ipykernel
@@ -84,8 +83,9 @@ docs =
     plotly
     jupyter_sphinx
     myst_parser
-    panel
-    pyvista
+    pyvista[all,jupyter]
+    trame<3
+    ipywidgets
     xvfbwrapper
 
 
