Uplift pandas dependency as pandas-2.1.1 contains fix
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -49,7 +49,7 @@ python_requires = >=3.8
 install_requires =
     numpy==1.23.5
     scipy
-    pandas>=1.4.0,<2.1
+    pandas>=1.4.0,!=2.1
     h5py!=3.7.0
     matplotlib
     cython
