Pin ipython version for testing
https://github.com/ipython/ipython/issues/14235

Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -74,6 +74,7 @@ testing =
     testbook
     ipykernel
     ipywidgets
+    ipython<8.17.0 # https://github.com/ipython/ipython/issues/14235
 
 docs =
     sphinx
