--- a/setup.cfg
+++ b/setup.cfg
@@ -87,6 +87,7 @@ docs =
     pyvista[all,jupyter]
     trame<3
     ipywidgets
+    ipython<8.17.0 # https://github.com/ipython/ipython/issues/14235
     xvfbwrapper
 
 
