Trash -Xfrozen_modules option
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -27,4 +27,4 @@ jobs:
         pip install -U setuptools setuptools_scm wheel
         pip install -e .[all,docs]
     - name: Build docs
-      run: sphinx-build -Xfrozen_modules=off -b html docs _build/html
+      run: sphinx-build -b html docs _build/html
