Add ipykernel to docs section
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -88,6 +88,7 @@ docs =
     trame<3
     ipywidgets
     ipython<8.17.0 # https://github.com/ipython/ipython/issues/14235
+    ipykernel
     xvfbwrapper
 
 
