--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -12,6 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       MPLBACKEND: svg
+      PYDEVD_DISABLE_FILE_VALIDATION: 1
     strategy:
       fail-fast: false
 
