Install pandoc using apt-get in docs CI
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -27,5 +27,6 @@ jobs:
         python -m pip install --upgrade pip
         pip install -U setuptools setuptools_scm wheel
         pip install -e .[all,docs]
+        apt-get install pandoc
     - name: Build docs
       run: sphinx-build -b html docs _build/html
