Add github action to build docs for testing purposes (#41)
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -87,6 +87,8 @@ docs =
     pyvista[all,jupyter]
     trame<3
     ipywidgets
+    ipython<8.17.0 # https://github.com/ipython/ipython/issues/14235
+    ipykernel
     xvfbwrapper
 
 
