Add ansys-mapdl-reader dependency
Signed-off-by: Benjamin Maier <benjamin.maier2@de.bosch.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -90,6 +90,7 @@ docs =
     ipython<8.17.0 # https://github.com/ipython/ipython/issues/14235
     ipykernel
     xvfbwrapper
+    ansys-mapdl-reader
 
 
 analysis =
@@ -110,7 +111,7 @@ extras =
     jupyter
     matplotlib
     plotly
-
+    ansys-mapdl-reader
 
 
 [tool:pytest]
