Uplift numpy version pin for odbclient
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/tools/odbclient/setup.cfg
+++ b/tools/odbclient/setup.cfg
@@ -42,7 +42,7 @@ package_dir =
 install_requires =
     importlib-metadata; python_version<"3.8"
     pandas
-    numpy==1.23.5
+    numpy
 
 [options.packages.find]
 where = src
