--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -27,6 +27,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install -U setuptools setuptools_scm wheel
         pip install -e .[all,docs]
+        pip install -e ./tools/odbclient
         sudo apt-get install pandoc
     - name: Build docs
       run: sphinx-build -b html docs _build/html
