--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,14 @@
 [build-system]
 # AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
-requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5", "wheel"]
+requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5", "wheel", "setuptools-rust"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools_scm]
 # See configuration details in https://github.com/pypa/setuptools_scm
 version_scheme = "no-guess-dev"
+
+[[tool.setuptools-rust.ext-modules]]
+target = "pylife._rust_lib"
+path = "rust/Cargo.toml"
+binding = "PyO3"
+debug = false
