--- a/setup.cfg
+++ b/setup.cfg
@@ -99,12 +99,7 @@ analysis =
 tsfresh =
     tsfresh
 
-pymc =
-   pymc
-   bambi
-   numpy
-
-all = %(tsfresh)s %(pymc)s
+all = %(tsfresh)s
 
 extras =
     jupyter
