--- a/setup.cfg
+++ b/setup.cfg
@@ -102,7 +102,7 @@ tsfresh =
 pymc =
    pymc
    bambi
-   numpy<1.26  # https://github.com/pymc-devs/pymc/issues/7043#issuecomment-1837141888
+   numpy
 
 all = %(tsfresh)s %(pymc)s
 
