--- a/setup.cfg
+++ b/setup.cfg
@@ -48,7 +48,7 @@ python_requires = >=3.8
 # For more information, check out https://semver.org/.
 install_requires =
     numpy>=1.23.5
-    scipy!=1.13.*
+    scipy
     pandas>=1.4.0,!=2.1
     h5py!=3.7.0
     matplotlib
