Better names for workflow jobs
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -8,7 +8,8 @@ on:
       - develop
 
 jobs:
-  build:
+  docsbuild:
+    name: Build documentation
     runs-on: ubuntu-latest
     env:
       MPLBACKEND: svg
