Special requirements section for unit-tests
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/.github/workflows/pytest-python-dev.yml
+++ b/.github/workflows/pytest-python-dev.yml
@@ -25,7 +25,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install -U setuptools setuptools_scm wheel
         pip install flake8 pytest pytest-cov
-        pip install -e .[testing]
+        pip install -e .[unit-testing]
     - name: Unit tests
       run: pytest
     - name: Notebook flow tests
