--- a/setup.cfg
+++ b/setup.cfg
@@ -64,17 +64,24 @@ exclude =
     batch_scripts
 
 [options.extras_require]
-testing =
+unit-testing =
     setuptools
     pytest
     pytest-cov
     hypothesis
+
+testing =
+    %(unit-testing)s
+    %(visuals)s
+    testbook
+
+visuals =
     pyvista
     xvfbwrapper
-    testbook
     ipykernel
     ipywidgets
-    ipython<8.17.0 # https://github.com/ipython/ipython/issues/14235
+    ipython
+    pickleshare
 
 docs =
     sphinx
@@ -86,11 +93,7 @@ docs =
     myst_parser
     pyvista[all,jupyter]
     trame<3
-    ipywidgets
-    ipython<8.17.0 # https://github.com/ipython/ipython/issues/14235
-    ipykernel
-    xvfbwrapper
-    ansys-mapdl-reader
+    %(visuals)s
 
 analysis =
     flake8
