Put notebook flow tests in extra job on python-dev tests
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/.github/workflows/pytest-python-dev.yml
+++ b/.github/workflows/pytest-python-dev.yml
@@ -1,14 +1,14 @@
 name: Testsuite python development version
 
 on:
-  pull_request:
   push:
     branches:
       - master
       - develop
 
 jobs:
-  tests:
+  testsuite-small:
+    name: Minimal test suite
     runs-on: ubuntu-22.04
     env:
       MPLBACKEND: svg
@@ -24,11 +24,36 @@ jobs:
         sudo apt-get install libopenblas-dev libhdf5-dev
         python -m pip install --upgrade pip
         pip install -U setuptools setuptools_scm wheel
-        pip install flake8 pytest pytest-cov
         pip install -e .[unit-testing]
     - name: Unit tests
       run: pytest
+
+  testsuite-big:
+    name: Complete test suite
+    needs: [testsuite-small]
+    runs-on: ubuntu-22.04
+    env:
+      MPLBACKEND: svg
+
+    steps:
+    - uses: actions/checkout@v4
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.13-dev'
+    - name: Install dependencies
+      continue-on-error: true
+      run: |
+        sudo apt-get install libopenblas-dev libhdf5-dev
+        python -m pip install --upgrade pip
+        pip install -U setuptools setuptools_scm wheel pytest
+        pip install -e .[unit-testing]
+        pip install -e .[all,testing]
+    - name: Unit tests
+      continue-on-error: true
+      run: pytest
     - name: Notebook flow tests
       uses: coactions/setup-xvfb@v1
+      continue-on-error: true
       with:
         run: python -m pytest -m demos
