--- a/.github/workflows/pypi-deploy.yml
+++ b/.github/workflows/pypi-deploy.yml
@@ -1,6 +1,7 @@
 name: Build and upload to PyPI
 
 on:
+  workflow_dispatch:
   release:
     types: [published]
 
@@ -38,7 +39,8 @@ jobs:
           python setup.py bdist_wheel
       - uses: actions/upload-artifact@v4
         with:
-          path: ./dist/*.whl
+            name: artifact-wheel
+            path: ./dist/*.whl
 
 
   build_sdist:
@@ -63,6 +65,7 @@ jobs:
 
       - uses: actions/upload-artifact@v4
         with:
+          name: artifact-sdist
           path: dist/*.tar.gz
 
   upload_pypi:
@@ -72,12 +75,17 @@ jobs:
     steps:
       - uses: actions/download-artifact@v4
         with:
-          name: artifact
+          name: artifact-sdist
+          path: dist
+
+      - uses: actions/download-artifact@v4
+        with:
+          name: artifact-wheel
           path: dist
 
       - uses: pypa/gh-action-pypi-publish@master
         with:
-          user: __token__
-          password: ${{ secrets.upload_pypi }}
-          #password: ${{ secrets.test_pypi }}
-          #repository_url: https://test.pypi.org/legacy/
+          # user: __token__
+          # password: ${{ secrets.upload_pypi }}
+          password: ${{ secrets.test_pypi }}
+          repository_url: https://test.pypi.org/legacy/
