Update pypi update github action
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/.github/workflows/pypi-deploy.yml
+++ b/.github/workflows/pypi-deploy.yml
@@ -83,7 +83,7 @@ jobs:
           name: artifact-wheel
           path: dist
 
-      - uses: pypa/gh-action-pypi-publish@master
+      - uses: pypa/gh-action-pypi-publish@v1.9.0
         with:
           # user: __token__
           # password: ${{ secrets.upload_pypi }}
