--- a/.github/workflows/pypi-deploy-odbclient.yml
+++ b/.github/workflows/pypi-deploy-odbclient.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Build wheels
         run: |
           python setup.py bdist_wheel
-      - uses: actions/upload-artifact@v2
+      - uses: actions/upload-artifact@v4
         with:
           name: artifact-wheel
           path: tools/odbclient/dist/*.whl
@@ -77,7 +77,7 @@ jobs:
 
       - uses: pypa/gh-action-pypi-publish@v1.9.0
         with:
-          # user: __token__
-          # password: ${{ secrets.upload_pypi }}
-          password: ${{ secrets.test_pypi }}
-          repository_url: https://test.pypi.org/legacy/
+          user: __token__
+          password: ${{ secrets.upload_pypi }}
+          # password: ${{ secrets.test_pypi }}
+          # repository_url: https://test.pypi.org/legacy/
