--- a/.github/workflows/pypi-deploy-odbserver.yml
+++ b/.github/workflows/pypi-deploy-odbserver.yml
@@ -77,7 +77,7 @@ jobs:
 
       - uses: pypa/gh-action-pypi-publish@v1.9.0
         with:
-          # user: __token__
-          # password: ${{ secrets.upload_pypi }}
-          password: ${{ secrets.test_pypi }}
-          repository_url: https://test.pypi.org/legacy/
+          user: __token__
+          password: ${{ secrets.upload_pypi }}
+          # password: ${{ secrets.test_pypi }}
+          # repository_url: https://test.pypi.org/legacy/
