--- a/.github/workflows/pypi-deploy-odbclient.yml
+++ b/.github/workflows/pypi-deploy-odbclient.yml
@@ -21,14 +21,14 @@ jobs:
       - uses: actions/setup-python@v5
         name: Install Python
         with:
-          python-version: '3.8'
+          python-version: '3.12'
 
       - name: Install setuptools
         run: |
           pip install -U setuptools setuptools_scm wheel
       - name: Build wheels
         run: |
-          python setup.py bdist_wheel
+          pip wheel --no-deps -w dist .
       - uses: actions/upload-artifact@v4
         with:
           name: artifact-wheel
@@ -46,14 +46,14 @@ jobs:
       - uses: actions/setup-python@v5
         name: Install Python
         with:
-          python-version: '3.8'
+          python-version: '3.12'
 
       - name: Install setuptools
         run: |
-          pip install -U setuptools setuptools_scm wheel
+          pip install -U setuptools setuptools_scm build
 
       - name: Build sdist
-        run: python setup.py sdist
+        run: python -m build . --sdist
 
       - uses: actions/upload-artifact@v4
         with:
