--- a/.github/workflows/pypi-deploy.yml
+++ b/.github/workflows/pypi-deploy.yml
@@ -5,11 +5,9 @@ on:
   release:
     types: [published]
 
-env:
-  CIBW_BUILD: cp37-* cp38-* cp39-* cp310-*
-  CIBW_BEFORE_BUILD: pip install cython
-  CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
-  CIBW_MANYLINUX_I686_IMAGE: manylinux2014
+  push:
+    branches: [ci-debug]
+
 
 jobs:
   build_wheels:
@@ -24,23 +22,16 @@ jobs:
         with:
           fetch-depth: 0
 
-      - uses: actions/setup-python@v5
-        name: Install Python
-        with:
-          python-version: '3.8'
-
-      - name: Install cibuildwheel
-        run: |
-          # python -m pip install cibuildwheel
-          pip install -U setuptools setuptools_scm wheel
       - name: Build wheels
-        run: |
-          # python -m cibuildwheel --output-dir wheelhouse
-          python setup.py bdist_wheel
+        uses: pypa/cibuildwheel@v2.21.1
+        env:
+          CIBW_BUILD: cp38-* cp39-* cp310-* cp311-* cp312-*
+          CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
+
       - uses: actions/upload-artifact@v4
         with:
             name: artifact-wheel-${{ matrix.os }}
-            path: ./dist/*.whl
+            path: ./wheelhouse/*.whl
 
 
   build_sdist:
@@ -54,14 +45,13 @@ jobs:
       - uses: actions/setup-python@v5
         name: Install Python
         with:
-          python-version: '3.8'
+          python-version: '3.12'
 
       - name: Install setuptools
         run: |
-          pip install -U setuptools setuptools_scm wheel
-
+          pip install -U setuptools setuptools_scm wheel build
       - name: Build sdist
-        run: python setup.py sdist
+        run: python -m build . --sdist
 
       - uses: actions/upload-artifact@v4
         with:
