Exclude deprecated modules from pytest discovery
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -120,6 +120,8 @@ addopts =
     --cov src/pylife --cov-append -m "not slow_acceptance and not demos"
     --doctest-modules
     --ignore=src/pylife/materialdata/woehler/bayesian.py
+    --ignore=src/pylife/strength/helpers.py
+    --ignore=src/pylife/strength/sn_curve.py
 
 norecursedirs =
     dist
