--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -6,6 +6,7 @@ on:
     branches:
       - master
       - develop
+      - ci-debug
   schedule:
     - cron: "0 9 * * 0"
 
@@ -19,23 +20,30 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-20.04, windows-latest]
-        python-version: ['3.8', '3.9', '3.10', '3.11', '3.12']
-
+        python-version: ['3.8', '3.9', '3.10', '3.11', '3.12', '3.13']
+        include:
+          - python-version: "3.13"
+            only-minimal: true
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
+    - name: Install python essentials
       run: |
         python -m pip install --upgrade pip
         pip install -U setuptools setuptools_scm wheel
-        pip install flake8 pytest pytest-cov
-        pip install -e .[all,testing]
+    - name: Install dependencies complete
+      if: matrix.only-minimal != true
+      run: pip install -e .[all,testing]
+    - name: Install dependencies minimal
+      if: matrix.only-minimal == true
+      run: pip install -e .[testing]
     - name: Unit tests
       run: pytest
     - name: Notebook flow tests
+      if: matrix.only-minimal != true
       uses: coactions/setup-xvfb@v1
       with:
         run: python -m pytest -m demos
