--- a/setup.cfg
+++ b/setup.cfg
@@ -49,9 +49,8 @@ python_requires = >=3.9
 install_requires =
     numpy>=1.23.5
     scipy<1.15.0
-    pandas>=1.4.0,!=2.1
+    pandas>=2.2
     h5py!=3.7.0
-    cython
 
 [options.packages.find]
 where = src
