--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -20,18 +20,23 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v5
+
+    - name: Install uv
+      uses: astral-sh/setup-uv@v5
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -U setuptools setuptools_scm wheel
-        pip install flake8 pytest pytest-cov
-        pip install -e .[all,testing]
+    - name: Set up Python
+      run: uv python install
+    - name: Install python essentials
+      run: uv pip install -U setuptools setuptools_scm wheel pytest-xdist
+    - name: Install dependencies complete
+      if: matrix.only-minimal != true
+      run: uv pip install -e .[all,testing]
+    - name: Install dependencies minimal
+      if: matrix.only-minimal == true
+      run: uv pip install -e .[testing]
     - name: Unit tests
-      run: pytest
+      run: pytest -n auto
     - name: Notebook flow tests
       uses: coactions/setup-xvfb@v1
       with:
