--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -6,6 +6,7 @@ on:
     branches:
       - master
       - develop
+      - ci-debug
   schedule:
     - cron: "0 12 * * 0"
 
@@ -21,16 +22,19 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Set up Python 3.12
-      uses: actions/setup-python@v5
+    - name: Install uv
+      uses: astral-sh/setup-uv@v5
       with:
         python-version: 3.12
+    - name: Set up Python
+      run: uv python install
+    - name: Install python essentials
+      run: uv pip install -U setuptools setuptools_scm wheel
+    - name: Install pandoc
+      run: sudo apt-get install pandoc
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install -U setuptools setuptools_scm wheel
-        pip install -e .[all,docs]
-        pip install -e ./tools/odbclient
-        sudo apt-get install pandoc
+        uv pip install ".[all,docs]"
+        uv pip install "./tools/odbclient"
     - name: Build docs
       run: sphinx-build -b html docs _build/html
