--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -26,22 +26,23 @@ jobs:
             only-minimal: true
     steps:
     - uses: actions/checkout@v4
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v5
+
+    - name: Install uv
+      uses: astral-sh/setup-uv@v5
       with:
         python-version: ${{ matrix.python-version }}
+    - name: Set up Python
+      run: uv python install
     - name: Install python essentials
-      run: |
-        python -m pip install --upgrade pip
-        pip install -U setuptools setuptools_scm wheel
+      run: uv pip install -U setuptools setuptools_scm wheel pytest-xdist
     - name: Install dependencies complete
       if: matrix.only-minimal != true
-      run: pip install -e .[all,testing]
+      run: uv pip install -e .[all,testing]
     - name: Install dependencies minimal
       if: matrix.only-minimal == true
-      run: pip install -e .[testing]
+      run: uv pip install -e .[testing]
     - name: Unit tests
-      run: pytest
+      run: pytest -n auto
     - name: Notebook flow tests
       if: matrix.only-minimal != true
       uses: coactions/setup-xvfb@v1
