--- a/setup.cfg
+++ b/setup.cfg
@@ -48,7 +48,7 @@ python_requires = >=3.9
 # For more information, check out https://semver.org/.
 install_requires =
     numpy>=1.23.5
-    scipy
+    scipy<1.15.0
     pandas>=1.4.0,!=2.1
     h5py!=3.7.0
     cython
@@ -100,6 +100,7 @@ analysis =
 
 tsfresh =
     tsfresh
+    numba>=0.60
 
 all = %(tsfresh)s
 
