Drop src/pylife/materialdata/woehler/bayesian.py from test coverage
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/.coveragerc
+++ b/.coveragerc
@@ -5,6 +5,7 @@ source = pylife
 omit =
      src/pylife/strength/helpers.py
      src/pylife/strength/sn_curve.py
+     src/pylife/materialdata/woehler/bayesian.py
 
 [paths]
 source =
