Uplift scipy version restriction and restrict tsfresh>=0.21.0
Fix #155, follow blue-yonder/tsfresh#1097

Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -48,7 +48,7 @@ python_requires = >=3.9
 # For more information, check out https://semver.org/.
 install_requires =
     numpy>=1.23.5
-    scipy<1.15.0
+    scipy
     pandas>=2.2
     h5py!=3.7.0
 
@@ -98,7 +98,7 @@ analysis =
     pep8-naming
 
 tsfresh =
-    tsfresh
+    tsfresh>=0.21.0
     numba>=0.60
 
 all = %(tsfresh)s
