Update ubuntu version for CI
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/.github/workflows/pytest-python-dev.yml
+++ b/.github/workflows/pytest-python-dev.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   testsuite:
     name: Test suiite
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     env:
       MPLBACKEND: svg
 
