--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "scipy",
     "pandas>=2.2",
     "h5py!=3.7.0",
+    "pickleshare>=0.7.5 ; python_full_version < '3.11'",
 ]
 dynamic = ["version"]
 
@@ -32,6 +33,7 @@ dev = [
   "pytest-cov",
   "pytest-timeout",
   "hypothesis",
+  "testbook",
 ]
 visuals = [
   "pyvista",
@@ -43,7 +45,6 @@ visuals = [
 
 ]
 testing = [
-  "testbook",
   {include-group = "dev"},
   {include-group = "visuals"}
 ]
