--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -10,6 +10,16 @@ build:
     python: "3.11"
   apt_packages:
     - xvfb
+  jobs:
+    pre_create_environment:
+       - asdf plugin add uv
+       - asdf install uv latest
+       - asdf global uv latest
+    create_environment:
+       - uv venv "${READTHEDOCS_VIRTUALENV_PATH}"
+    install:
+       - UV_PROJECT_ENVIRONMENT="${READTHEDOCS_VIRTUALENV_PATH}" uv sync --group docs --all-extras
+       - UV_PROJECT_ENVIRONMENT="${READTHEDOCS_VIRTUALENV_PATH}" uv pip install tools/odbclient
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
@@ -22,14 +32,3 @@ sphinx:
 # Optionally build your docs in additional formats such as PDF
 formats:
   - pdf
-
-python:
-  install:
-    - method: pip
-      path: .
-      extra_requirements:
-        - docs
-        - all
-        - extras
-    - method: pip
-      path: tools/odbclient
