Update pypi deployment
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/.github/workflows/pypi-deploy-odbclient.yml
+++ b/.github/workflows/pypi-deploy-odbclient.yml
@@ -5,6 +5,9 @@ on:
   release:
     types: [published]
 
+  push:
+    branches: [ci-debug]
+
 defaults:
   run:
     working-directory: tools/odbclient
@@ -63,7 +66,6 @@ jobs:
   upload_pypi:
     needs: [build_wheels, build_sdist]
     runs-on: ubuntu-latest
-    if: github.event_name == 'release' && github.event.action == 'published'
     steps:
       - uses: actions/download-artifact@v4
         with:
@@ -75,9 +77,12 @@ jobs:
           name: artifact-wheel
           path: dist
 
-      - uses: pypa/gh-action-pypi-publish@v1.9.0
+      - name: Publish package distributions to PyPI
+        if: github.event_name == 'release' && github.event.action == 'published'
+        uses: pypa/gh-action-pypi-publish@release/v1
+
+      - name: Publish package distributions to PyPI test
+        if: github.event_name == 'push'
+        uses: pypa/gh-action-pypi-publish@release/v1
         with:
-          user: __token__
-          password: ${{ secrets.upload_pypi }}
-          # password: ${{ secrets.test_pypi }}
-          # repository_url: https://test.pypi.org/legacy/
+          repository-url: https://test.pypi.org/legacy/
