--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -6,6 +6,7 @@ on:
     branches:
       - master
       - develop
+      - ci-debug
 
 jobs:
   build:
@@ -15,7 +16,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-20.04, windows-latest]
+        os: [ubuntu-latest, windows-latest]
         python-version: ['3.8', '3.9', '3.10', '3.11', '3.12']
 
     steps:
@@ -25,19 +26,15 @@ jobs:
       uses: astral-sh/setup-uv@v5
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Set up Python
-      run: uv python install
-    - name: Install python essentials
-      run: uv pip install -U setuptools setuptools_scm wheel pytest-xdist
     - name: Install dependencies complete
       if: matrix.only-minimal != true
-      run: uv pip install -e .[all,testing]
+      run: uv sync --dev --all-extras
     - name: Install dependencies minimal
       if: matrix.only-minimal == true
-      run: uv pip install -e .[testing]
+      run: uv sync --dev
     - name: Unit tests
-      run: pytest -n auto
+      run: uv run pytest -n auto
     - name: Notebook flow tests
       uses: coactions/setup-xvfb@v1
       with:
-        run: python -m pytest -m demos
+        run: uv run pytest -m demos
