--- a/.github/workflows/pypi-deploy-odbserver.yml
+++ b/.github/workflows/pypi-deploy-odbserver.yml
@@ -66,6 +66,10 @@ jobs:
   upload_pypi:
     needs: [build_wheels, build_sdist]
     runs-on: ubuntu-latest
+    environment: release
+    permissions:
+      # IMPORTANT: this permission is mandatory for Trusted Publishing
+      id-token: write
     steps:
       - uses: actions/download-artifact@v4
         with:
