No longer upload to test.pypi.org – only gives file name clashes
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/.github/workflows/pypi-deploy-odbclient.yml
+++ b/.github/workflows/pypi-deploy-odbclient.yml
@@ -91,9 +91,9 @@ jobs:
         if: github.event_name == 'release' && github.event.action == 'published'
         uses: pypa/gh-action-pypi-publish@release/v1
 
-      - name: Publish package distributions to PyPI test
-        if: github.event_name != 'release'
-        uses: pypa/gh-action-pypi-publish@release/v1
-        with:
-          verbose: true
-          repository-url: https://test.pypi.org/legacy/
+      # - name: Publish package distributions to PyPI test
+      #   if: github.event_name != 'release'
+      #   uses: pypa/gh-action-pypi-publish@release/v1
+      #   with:
+      #     verbose: true
+      #     repository-url: https://test.pypi.org/legacy/
