Make test docs ci fail when sphinx issues warnings
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -37,4 +37,4 @@ jobs:
         uv sync --group docs --all-extras
         uv pip install "./tools/odbclient"
     - name: Build docs
-      run: sphinx-build -b html docs _build/html
+      run: sphinx-build -W -b html docs _build/html
