Pin sphinx<9.0.0 until vidartf/nbsphinx-link#25 is resolved
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,7 +50,7 @@ testing = [
   {include-group = "visuals"}
 ]
 docs = [
-  "sphinx",
+  "sphinx<9.0.0",
   "nbsphinx",
   "nbsphinx-link",
   "sphinx_rtd_theme>=1.0",
