--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -31,7 +31,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies complete
       if: matrix.only-minimal != true
-      run: uv sync --dev --all-extras
+      run: uv sync --dev --extra=all
     - name: Install dependencies minimal
       if: matrix.only-minimal == true
       run: uv sync --dev
