Adjust dev dependencies
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,8 +33,13 @@ dev = [
   "pytest-cov",
   "pytest-timeout",
   "hypothesis",
-  "testbook",
   "pytest-xdist>=3.8.0",
+
+  # For demo notebooks
+  "testbook",
+  "ipykernel",
+  "ipywidgets",
+  "matplotlib"
 ]
 visuals = [
   "pyvista",
