--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -21,6 +21,9 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest]
         python-version: ['3.9', '3.10', '3.11', '3.12', '3.13', '3.14']
+        include:
+          - python-version: '3.14'
+            only-minimal: true
 
     steps:
     - uses: actions/checkout@v4
@@ -31,10 +34,10 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies complete
       if: matrix.only-minimal != true
-      run: uv sync --dev --extra=all
+      run: uv sync --dev --all-extras
     - name: Install dependencies minimal
       if: matrix.only-minimal == true
-      run: uv sync --dev
+      run: uv sync --dev --extra=all
     - name: Unit tests
       run: uv run pytest -n auto
     - name: Notebook flow tests
