Pin trame-vtk to fix pyvista immages in docs
Probably due to pyvista/pyvista#8323, Kitware/trame-vtk#101

Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,7 +63,8 @@ docs = [
   "jupyter_sphinx",
   "myst_parser",
   "pyvista[all,jupyter]",
-  "trame<3",
+  "trame",
+  "trame-vtk<2.10.3",
   {include-group = "visuals"}
 ]
 
